Add & Remove commands V2 (#156)